# motion_interfaces

./: CMakeLists.txt  README.md  package.xml
msg/: BaseVelocityCommand.msg  CartesianPoseCommand.msg  CartesianVelocity.msg  CartesianVelocityCommand.msg  CommandMetadata.msg  JointPositionCommand.msg  StopCommand.msg
